# seabotix_alpha

./: README.md
alpha_control/: CMakeLists.txt  package.xml
alpha_control/config/: alpha_control.yaml  alpha_position_pid.yaml  gripper_control.yaml
alpha_control/launch/: gripper_controllers.launch  joint_control.launch  joint_control_joystick.launch  joint_controllers_moveit.launch  joint_effort_controllers.launch
alpha_control/scripts/: joint_position_controller.py  (+1 more)
alpha_description/: CMakeLists.txt  package.xml
alpha_description/launch/: alpha_arm.launch  upload_alpha.launch
alpha_description/meshes/: README.md
alpha_description/meshes/reach5mini/collision/: Jaw1.dae  Jaw2.dae
alpha_description/meshes/reach5mini/visual/: ForearmJoint.stl  Jaw1.stl  ShoulderJoint.stl  Wrist.stl
alpha_description/params/: parallel_gripper_config.yaml  robot_config.yaml
alpha_description/urdf/: alpha_arm.gazebo.xacro  alpha_arm.xacro  alpha_arm_with_base.xacro  alpha_default.xacro
seabotix_alpha_description/: CMakeLists.txt  package.xml
seabotix_alpha_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
seabotix_control/: CMakeLists.txt  package.xml
seabotix_control/config/: inertial.yaml  pos_pid_control.yaml  vel_pid_control.yaml
seabotix_control/config/thrusters/: TAM.yaml  thruster_manager.yaml
seabotix_control/launch/: generate_tam.launch  joy_velocity.launch  moveit_controllers.launch  thruster_manager.launch  uuv_teleop.launch
seabotix_control/scripts/: PositionControl.py  VelocityControl.py  vehicle_teleop.py
(+91 files in other folders)
